<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TableRow>

        <TextView
            android:id="@+id/btn_wlst"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/ic_botshe_wlst_in"
            android:gravity="center_horizontal"
            android:lines="2"
            android:text="@string/movact_btn_wlst1"
            android:textColor="@color/textColorNormal"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/btn_coll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/ic_botshe_collected"
            android:gravity="center_horizontal"
            android:lines="2"
            android:text="@string/movact_btn_coll1"
            android:textColor="@color/textColorNormal"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/btn_seen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/ic_botshe_watched"
            android:gravity="center_horizontal"
            android:lines="2"
            android:text="@string/movact_btn_seen1"
            android:textColor="@color/textColorNormal"
            android:textStyle="normal"/>

    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/btn_updt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/ic_botshe_download"
            android:gravity="center_horizontal"
            android:lines="2"
            android:text="@string/movact_btn_update"
            android:textColor="@color/textColorNormal"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/btn_imdb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/ic_botshe_extlink"
            android:gravity="center_horizontal"
            android:lines="2"
            android:text="@string/movact_btn_go2imdb"
            android:textColor="@color/textColorNormal"
            android:textStyle="normal"/>

    </TableRow>

</TableLayout>
